--- a/css/style.css
+++ b/css/style.css
@@ -292,3 +292,12 @@ footer{
   justify-content: center;
   z-index: 9999;
 }
+
+@media(max-width: 768px) {
+    .overlay{
+        width: 180%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+    }
+}
